--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "1"
+    "@tauri-apps/api": "1",
+    "bits-ui": "^0.21.4",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "3.1.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tauri-apps/cli": "1",
     "@tsconfig/svelte": "5.0.4",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
     "svelte": "4.2.15",
     "svelte-check": "3.6.9",
+    "tailwindcss": "^3.3.6",
     "tslib": "2.6.2",
     "typescript": "5.4.5",
-    "vite": "5.2.10",
-    "@tauri-apps/cli": "1"
+    "vite": "5.2.10"
   }
 }
